# memorybyte

./: .gitignore  Cargo.toml  README.md  database.db  diesel.toml  package-lock.json  package.json  turbo.json  vercel.json
.github/workflows/: format.yml
apps/backend/: Cargo.toml  package.json
apps/backend/http/: requests.http
apps/backend/migrations/2025-03-24-162412_create_users/: up.sql
apps/backend/migrations/2025-03-26-124815_create_users/: up.sql
apps/backend/migrations/2025-03-27-160630_create_users/: up.sql
apps/backend/migrations/2025-03-27-163647_create_users/: up.sql
apps/backend/migrations/2025-03-27-174452_users/: up.sql
apps/backend/src/: database.rs  main.rs  routes.rs
apps/backend/src/diesel_mod/: models.rs  schema.rs
apps/backend/src/diesel_schema/: models.rs  schema.rs
apps/backend/src/models/: category.rs  flipcard.rs  mod.rs  user.rs
apps/backend/src/routes/: user_routes.rs
apps/frontend/: index.html  package.json
apps/frontend/src/: index.css  main.tsx  utils.ts
apps/frontend/src/components/: Box.tsx  Button.tsx  Input.tsx  Label.tsx
apps/frontend/src/layouts/: FaqLayout.tsx  FooterLayout.tsx  HeaderLayout.tsx
apps/frontend/src/pages/: Home.tsx  Login.tsx  NoSite.tsx
