[package]
name = "backend"
edition.workspace = true
authors.workspace = true
version.workspace = true

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.10.2"
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = "0.4.40"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "mysql"] }
tokio = "1.44.1"

# Buduj sobie wersję produkcyjną poprzez
# cargo run --release jak tu jesteś
# albo po prostu turbo run dev, któ©y już to robi.
# Szybciej Ci to buduje i optymalizuje
[profile.release]
lto = "thin"
opt-level = 3
